# soul-mesh

./: .gitignore  README.md  pyproject.toml
docs/plans/: 2026-02-22-distributed-compute-mesh-design.md  2026-02-22-sync-extraction-design.md  2026-02-22-sync-extraction-impl.md  2026-02-22-transport-extraction-design.md  2026-02-22-transport-extraction-impl.md  2026-02-22-v1-implementation-plan.md  2026-02-23-layer4-dashboard.md  2026-02-23-layers-2-4-design.md
soul_mesh/: __init__.py  agent.py  auth.py  cli.py  config.py  dashboard.py  db.py  discovery.py  election.py  executor.py  hub.py  linking.py  node.py  resources.py  server.py  sync.py  transport.py
tests/: test_agent.py  test_auth.py  test_cli.py  test_config.py  test_dashboard.py  test_db.py  test_discovery.py  test_election.py  test_executor.py  test_heartbeat_history.py  test_hub.py  test_integration.py  test_linking.py  test_resources.py  test_server.py  test_sync.py  test_transport.py
