[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[project]
name = "soul-mesh"
version = "0.1.0"
description = "Multi-device mesh networking with hub election, peer discovery, and delta sync."
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.11"
authors = [{name = "Rishav"}]
keywords = ["mesh", "distributed", "peer-discovery", "hub-election", "sync"]

dependencies = [
    "aiosqlite>=0.20.0",
    "pydantic-settings>=2.7.0",
    "structlog>=24.0.0",
    "websockets>=12.0",
    "PyJWT>=2.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.8.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["soul_mesh*"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
